k8s/apps/analytics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics
  namespace: url-shortener
spec:
  selector:
    app: analytics
  ports:
    - port: 8080
      targetPort: 8080
