k8s/apps/redirect-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redirect
  namespace: url-shortener
spec:
  selector:
    app: redirect
  ports:
    - port: 8080
      targetPort: 8080
