k8s/apps/shortener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shortener
  namespace: url-shortener
spec:
  selector:
    app: shortener
  ports:
    - port: 8080
      targetPort: 8080
